Compile application as module